tool/dual_target_smoke/generated/dual_bindings_ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Native (dart:ffi) bindings for the dual-target smoke fixture.
class DualNativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DualNativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DualNativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int dualAdd(
    int a,
    int b,
  ) {
    return _dualAdd(
      a,
      b,
    );
  }

  late final _dualAddPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'dualAdd');
  late final _dualAdd = _dualAddPtr.asFunction<int Function(int, int)>();

  void dualPointScale(
    ffi.Pointer<DualPoint> p,
    double k,
  ) {
    return _dualPointScale(
      p,
      k,
    );
  }

  late final _dualPointScalePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<DualPoint>, ffi.Float)>>('dualPointScale');
  late final _dualPointScale = _dualPointScalePtr
      .asFunction<void Function(ffi.Pointer<DualPoint>, double)>();

  int dualGreet(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> out,
    int outLen,
  ) {
    return _dualGreet(
      name,
      out,
      outLen,
    );
  }

  late final _dualGreetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('dualGreet');
  late final _dualGreet = _dualGreetPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();
}

final class DualPoint extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;
}
